修复长动态SQL栈溢出并支持UTF16脚本